--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,19 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>CorePandas</name>
   <description>Java equivalent to Pandas library written in Python</description>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-          <source/>
-          <target/>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+   <build>
+  	  <sourceDirectory>src</sourceDirectory>
+	  <plugins>
+	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-compiler-plugin</artifactId>
+	      <version>2.3.2</version>
+	      <configuration>
+	        <source>1.8</source>
+	        <target>1.8</target>
+	        <encoding>UTF-8</encoding>
+	      </configuration>
+	    </plugin>
+	  </plugins>
+</build>
 </project>
