--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>CorePandas</groupId>
-  <artifactId>CorePandas</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>CorePandas</name>
-  <description>Java equivalent to Pandas library written in Python</description>
-   <build>
-  	  <sourceDirectory>src</sourceDirectory>
-	  <plugins>
-	    <plugin>
-	      <groupId>org.apache.maven.plugins</groupId>
-	      <artifactId>maven-compiler-plugin</artifactId>
-	      <version>2.3.2</version>
-	      <configuration>
-	        <source>1.8</source>
-	        <target>1.8</target>
-	        <encoding>UTF-8</encoding>
-	      </configuration>
-	    </plugin>
-	  </plugins>
-</build>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>CorePandas</groupId>
+	<artifactId>CorePandas</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>CorePandas</name>
+	<description>Java equivalent to Pandas library written in Python</description>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.5</version>
+		</dependency>
+	</dependencies>
 </project>
